<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:cotext=".MainActivity">
    <item
        android:id="@+id/bgImage"
        android:title="@string/change_background_image">
        <menu>
            <item
                android:id="@+id/imageA"
                android:title="@string/imageA"
                android:icon="@drawable/a"/>
            <item
                android:id="@+id/imageB"
                android:title="@string/imageB"
                android:icon="@drawable/b"/>
            <item
                android:id="@+id/imageC"
                android:title="@string/imageC"
                android:icon="@drawable/c"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/bgColor"
        android:title="@string/change_background_color">
        <menu>
            <item
                android:id="@+id/yellow"
                android:title="@string/yellow"/>
            
            <item
                android:id="@+id/red"
                android:title="@string/red"/>
                            
            <item
                android:id="@+id/blue"
                android:title="@string/blue"/>
                
        </menu>
    </item>
</menu>